<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText1"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:autofillHints="Number 1"
        android:ems="10"
        android:hint="@string/n1"
        android:inputType="number" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:autofillHints="Number 2"
        android:ems="10"
        android:hint="@string/n2"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helloWorld" />

    <Button
        android:id="@+id/addSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addSum" />

    <Button
        android:id="@+id/customToastButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customToast" />

</LinearLayout>